# language-ecmascript

./: .gitmodules  .travis.yml  CHANGELOG  language-ecmascript.cabal  stack.yaml
src/Language/: ECMAScript5.hs
src/Language/ECMAScript5/: Lexer.hs  Parser.hs  ParserState.hs  PrettyPrint.hs  Syntax.hs
src/Language/ECMAScript5/Parser/: Combinators.hs  State.hs  Types.hs
src/Language/ECMAScript5/Syntax/: Annotations.hs  Arbitrary.hs  CodeGen.hs  QuasiQuote.hs
test/: TestMain.hs
test-data/: Sbp_7.9_A9_T4.js  illegal-escapes-ident.js  illegal-escapes-punc.js  illegal-naked-escapes.js  line-cont-string.js  test262ignore
test/Test/: Diff.hs  ExpressionTests.hs  Reference.hs  StatementTests.hs  Unit.hs
util/: jsapiParseTrees.sh  setupUtil.sh
